adding next.js site

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Portfolio of Sean Salvador — Software Engineer and Roblox Scripter."
+      content="Portfolio of Sean Salvador — Software Engineer"
     />
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -93,6 +93,14 @@
                 samples and stress datasets, ensuring the solver scales while staying correct.
               </p>
               <p class="project-tech">Tech: Python, Typer CLI, NumPy, Pytest, Ruff</p>
+              <div class="project-links">
+                <a
+                  href="https://github.com/seansalv/pomdp-viterbi-speech"
+                  target="_blank"
+                  rel="noopener"
+                  >View code</a
+                >
+              </div>
             </article>
 
             <article class="project-card" data-category="software">
